# DSA

./: .gitignore  HowTo.txt  helloworld.cpp
avl/: CMakeLists.txt  Report.docx  ~$Report.docx  ~WRL1510.tmp
avl/src/: CMakeLists.txt  avl.cpp  cli.h  main.cpp
avl/src/include/: avl.h
avl/tests/: CMakeLists.txt  avl_test.cpp
books/: CMakeLists.txt  Programming Quiz 2.docx  ~WRL0005.tmp
books/src/: CMakeLists.txt  books.cpp
books/src/include/: books.h
books/tests/: CMakeLists.txt  books_test.cpp
heap/: CMakeLists.txt
heap/src/: CMakeLists.txt  heap.cpp
heap/src/include/: extract_max.h  heap.h
heap/tests/: CMakeLists.txt  heap_test.cpp
iqr/: CMakeLists.txt
iqr/src/: CMakeLists.txt  iqr.cpp
iqr/src/include/: interquartile_range.h  iqr.h
iqr/tests/: CMakeLists.txt  iqr_test.cpp
levelsum/: CMakeLists.txt
levelsum/src/: CMakeLists.txt  levelsum.cpp
levelsum/src/include/: levelsum.h
levelsum/tests/: CMakeLists.txt  levelsum_test.cpp
suffix/: CMakeLists.txt
suffix/scripts/: test.sh
suffix/src/: CMakeLists.txt  suffix.cpp  suffix_count.cpp
suffix/src/include/: suffix_count.h
suffix/tests/: CMakeLists.txt  suffix_test.cpp
